--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,18 @@
   margin: 20px;
 }
 
+.wrapper-movie {
+  display: grid;
+  grid-template-columns: 200px auto;
+  grid-gap: 10px;
+  /* grid-auto-rows: minmax(100px, auto); */
+}
 
+.movies-list{
+  margin: 10px;
+}
+
+.tam-img{
+  width: 200px;
+}
 
